# microbenchmarks

./: .clang-format  .clang-tidy  .gitignore  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
gbenchutils/: pyproject.toml
gbenchutils/gbenchutils/: __init__.py
ports/fftconv/: portfile.cmake
src/: CMakeLists.txt  main.cpp
src/conv1d/: CMakeLists.txt  README.md  benchmarks.cpp  conv1d.hpp  main.cpp  plot.py  plot_dense.py
src/fft/: CMakeLists.txt  fft_wrapper.hpp  main.cpp
src/fft/fft/: Allocator.hpp  fft.hpp
src/fft/test/: fft_test.cpp
src/hilbert/: CMakeLists.txt  README.md  aligned_vector.hpp  benchmark_scale_and_mag.cpp  benchmarks.cpp  fftw.hpp  hilbert.hpp  hilbert.py  main.cpp  plot.py  test_fftw.cpp
src/matrix_conversion/: CMakeLists.txt  README.md  matrix_conversion_benchmark.cpp
src/matrix_shift/: CMakeLists.txt  README.md  matrix_shift_benchmark.cpp
src/similarity/: CMakeLists.txt  README.md  benchmarks.cpp  main.cpp  similiarity.hpp
